--- a/mvvm/servlets/ROOT/root/images/mvimgs.css
+++ b/mvvm/servlets/ROOT/root/images/mvimgs.css
@@ -29,5 +29,5 @@
 .ImgEditDisabled{background-image:url("icons/EditDisabled.gif");background-position:0px 0px;background-repeat:no-repeat;width:32px;height:32px;overflow:hidden;}
 
 
-.ImgLogo{background-image:url("Logo150x96.gif");background-position:0px 0px;background-repeat:no-repeat;width:150px;height:96px;overflow:hidden;}
+.ImgLogo{background-image:url("BrandingLogo.gif");background-position:0px 0px;background-repeat:no-repeat;width:150px;height:96px;overflow:hidden;}
 .ImgDarkBackground{background-image:url("DarkBackground1600x100.jpg");background-position:0px 0px;background-repeat:repeat;width:1600px;height:100px;overflow:hidden;}
