--- a/tran/mail/impl/resources/com/untangle/tran/mail/impl/quarantine/DigestEmail_HTML.vm
+++ b/tran/mail/impl/resources/com/untangle/tran/mail/impl/quarantine/DigestEmail_HTML.vm
@@ -551,7 +551,7 @@ hr {
         #end
 
         <br/>
-    <center>Powered by Untangle&reg; Server</center>
+    <center>Powered by Untangle&trade; Server</center>
 
           <hr size="1" width="100%"/>
         </td>
