--- a/gui/api/com/untangle/gui/configuration/DirectoryRemoteADJPanel.form
+++ b/gui/api/com/untangle/gui/configuration/DirectoryRemoteADJPanel.form
@@ -147,7 +147,7 @@
                     <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
                       <Font name="Dialog" size="12" style="0"/>
                     </Property>
-                    <Property name="text" type="java.lang.String" value="AD Server IP Address:"/>
+                    <Property name="text" type="java.lang.String" value="AD Server IP or Hostname:"/>
                   </Properties>
                   <Constraints>
                     <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignGridBagLayout" value="org.netbeans.modules.form.compat2.layouts.DesignGridBagLayout$GridBagConstraintsDescription">
