--- a/gui/api/com/untangle/gui/configuration/EmailOutgoingJPanel.form
+++ b/gui/api/com/untangle/gui/configuration/EmailOutgoingJPanel.form
@@ -17,6 +17,10 @@
     </Property>
   </Properties>
   <AuxValues>
+    <AuxValue name="FormSettings_generateMnemonicsCode" type="java.lang.Boolean" value="false"/>
+    <AuxValue name="FormSettings_listenerGenerationStyle" type="java.lang.Integer" value="0"/>
+    <AuxValue name="FormSettings_variablesLocal" type="java.lang.Boolean" value="false"/>
+    <AuxValue name="FormSettings_variablesModifier" type="java.lang.Integer" value="2"/>
     <AuxValue name="designerSize" type="java.awt.Dimension" value="-84,-19,0,5,115,114,0,18,106,97,118,97,46,97,119,116,46,68,105,109,101,110,115,105,111,110,65,-114,-39,-41,-84,95,68,20,2,0,2,73,0,6,104,101,105,103,104,116,73,0,5,119,105,100,116,104,120,112,0,0,1,-112,0,0,2,51"/>
   </AuxValues>
 
@@ -45,7 +49,7 @@
             <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
               <Font name="Dialog" size="12" style="0"/>
             </Property>
-            <Property name="text" type="java.lang.String" value="&lt;html&gt;The Outgoing Email Server is used to send emails, such as email reports, etc.  In most cases, automatic settings should work, but if they do not, you should specify the settings manually.&lt;/html&gt;"/>
+            <Property name="text" type="java.lang.String" value="The Outgoing Email Server is used to send emails, such as email reports, etc.  In most cases, automatic settings should work, but if they do not, you should specify the settings manually."/>
           </Properties>
           <Constraints>
             <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignGridBagLayout" value="org.netbeans.modules.form.compat2.layouts.DesignGridBagLayout$GridBagConstraintsDescription">
