--- a/gui/api/com/untangle/gui/configuration/EmailOutgoingJPanel.form
+++ b/gui/api/com/untangle/gui/configuration/EmailOutgoingJPanel.form
@@ -65,7 +65,7 @@
             <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
               <Font name="Dialog" size="12" style="0"/>
             </Property>
-            <Property name="text" type="java.lang.String" value="&lt;html&gt;Send Email Directly&lt;/html&gt;"/>
+            <Property name="text" type="java.lang.String" value="Send Email Directly"/>
             <Property name="actionCommand" type="java.lang.String" value="&lt;html&gt;&lt;b&gt;Use DHCP&lt;/b&gt; to automatically set Untangle&apos;s IP address from the network&apos;s DHCP server.&lt;/html&gt;"/>
           </Properties>
           <Events>
@@ -88,7 +88,7 @@
             <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
               <Font name="Dialog" size="12" style="0"/>
             </Property>
-            <Property name="text" type="java.lang.String" value="&lt;html&gt;Send Email using the specified SMTP Server&lt;/html&gt;"/>
+            <Property name="text" type="java.lang.String" value="Send Email using the specified SMTP Server"/>
           </Properties>
           <Events>
             <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="smtpEnabledJRadioButtonActionPerformed"/>
