--- a/uvm-lib/servlets/webui/root/untangle.css
+++ b/uvm-lib/servlets/webui/root/untangle.css
@@ -1,60 +1,68 @@
-body {
+#contentleft {
+	padding-top:35px;
+	background:transparent url(images/MainBackgroundLeft_222x100.png)  repeat-y !important;
 	text-align:center;
+	height:100%;
 }
-
-#container {
-background-color:#FFFFFF;
-margin:auto;
-min-width:600px;
-text-align:left;
-width:962px;
+.contentright {
+	background: transparent url(images/MainBackgroundRight_1398x100.png) repeat-y !important;
 }
-#contentleft {background:transparent url(images/MainBackgroundLeft_222x100.png)  repeat-y;
-	width:222px; float:left; text-align:center; min-height:700px;height:100%;}
 #racks {
 	position:relative;
-	background-color: transparent;
-	background-image: url(images/MainBackgroundRight_1398x100.png);
-	background-repeat: repeat-y;
-	background-position:left;
-	width:740px; float:right;min-height:700px;height:100%;
+	margin:auto;
+	width:718px;
+	height:100%;
+	padding-bottom: 54px;	
 }
 #racks #leftBorder{
-	float:left;
-	background-color: transparent;
-	background-image:  url(images/pipeline/LeftRack59x100.png);
-	background-repeat: repeat-y;
-	background-position:left;
-	width:59px; min-height:700px; height:100%;margin-left: 11px;
+	position:absolute;
+	top: 0px;
+	left:0px;
+	height:100%;
+	width:59px;
+	background: transparent url(images/pipeline/LeftRack59x100.png) repeat-y;
+	background-position:top left;
 }
 #racks #rightBorder{
-	float:right;
-	margin-right: 11px;
-	background-color: transparent;
-	background-image:  url(images/pipeline/RightRack59x100.png);
-	background-repeat: repeat-y;
-	background-position:right;
-	width:59px; min-height:700px;height:100%;
-}
-#logo {margin-top: 35px;margin-bottom: 35px;}
-#tabs {width:201px; margin-left: auto; margin-right: auto;margin-bottom: 14px;}
-.mainHelpIcon {background-image:url(images/IconHelp36x36.png) ;background-repeat:no-repeat;width:36px; height:36px;}
-#help {width:87px; margin-left: auto; margin-right: auto;margin-bottom: 10px;}
-
-#rack_list {
 	position:absolute;
+	top: 0px;
+	right:0px;
+	height:100%;
+	width:59px;
+	background: transparent url(images/pipeline/RightRack59x100.png) repeat-y;
+	background-position:top right;
+}
+#logo {
+	position:relative;
+	margin-bottom: 35px;
+}
+#tabs {
+	width:201px;
+	margin-left: auto;
+	margin-right: auto;
+	margin-bottom: 14px;
+}
+#help {
+	width:87px;
+	margin-left: auto;
+	margin-right: auto;
+	margin-bottom: 10px;
+}
+#rack_list {
+	position:relative;
 	top: 54px;
-	left: 26px;
+	left: 15px;
 	background-color: transparent;
-	background-image:  url(images/PlainSeparator688x50.png);
+	background-image: url(images/PlainSeparator688x50.png);
 	background-repeat: no-repeat;
 	width:690px;
 	height:50px;
 }
 #rack_nodes {
-	position:absolute;
-	top: 104px;
-	left: 26px;
+	position:relative;
+	top:54px;
+	left:15px;
+	width:690px;
 }
 div.rackNode {
 	position:relative;
@@ -64,9 +72,8 @@ div.rackNode {
 	width:690px;
 	height:101px;
 }
-
 #rack_select {
-	position:absolute;
+	position:relative;
 	top:12px;
 	left:90px;
 	background-color:#AFAFAF;
@@ -74,11 +81,11 @@ div.rackNode {
 	font-size:18px;
 	color: #7C7B7B;
 }
-
 #nodes_separator_text {
 	position:relative;
 	left: 90px;
 	top: 12px;
+	width: 300px;
 	font-family: verdana, sans-serif;
 	font-size:19px;
 	color: #7C7B7B;
@@ -94,32 +101,29 @@ div.rackNode {
 .nodeImage {
 	position:absolute;
 	top:8px;
-	left:54px;
+	left:50px;
 }
 div.nodeLabel {
 	position:absolute;
 	top: 19px;
-	left: 108px;
+	left: 100px;
 	font-family: verdana, sans-serif;
 	font-size:18px;
 	/*font-weight:bold;*/
 	color: #7C7B7B;
 }
-
 div.nodeBlingers {
 	position:absolute;
-	/*border:1px solid green;*/
 	top:0px;
 	right:90px;
-	width:330px;
+	width:310px;
 	height:82px;
 }
-.nodeHelpIcon {
+.helpIcon {
 	background:url(images/node/IconHelp28x28.png) no-repeat scroll -4px -4px !important; 
 	width:20px;
 	height:19px;
 }
-
 div.nodeStateIcon {
 	position:absolute;
 	top:20px;
@@ -152,29 +156,18 @@ div.nodeHelpButton {
 	width:18px;
 	height:16px;
 }
-div.nodeSettingsHideButton {
-	position:absolute;
-	left:150px;
-	bottom:17px;
-}
-.nodeSettingsHideIcon {
-	background:url(images/node/IconControlsOpen28x28.png) no-repeat scroll -5px -6px !important; 
-	width:18px;
-	height:16px;
-}
-div.nodeSettings {
-	position:relative;
-	background-color: transparent;
-	background-image:  url(images/LightGreyBackground1600x100.png);
-	background-repeat: repeat-y;
+div.windowBackground {
+	background: transparent url(images/LightGreyBackground1600x100.png) repeat-y;
+/*
 	border:1px solid rgb(128,127,127);
 	width:100%;
 	height:100%;
+*/	
 }
 div.nodeRemoveButton {
 	position:absolute;
 	left:10px;
-	bottom:17px;
+	bottom:14px;
 }
 .nodeRemoveIcon {
 	background:url(images/node/IconRemove_16x16.png) no-repeat !important; 
@@ -184,7 +177,7 @@ div.nodeRemoveButton {
 div.nodeCancelButton {
 	position:absolute;
 	right:93px;
-	bottom:17px;
+	bottom:14px;
 }
 .cancelIcon {
 	background:url(images/node/IconCancel_16x16.png) no-repeat !important; 
@@ -194,7 +187,7 @@ div.nodeCancelButton {
 div.nodeSaveButton {
 	position:absolute;
 	right:10px;
-	bottom:17px;
+	bottom:14px;
 }
 .saveIcon {
 	background:url(images/node/IconSave_23x16.png) no-repeat !important; 
@@ -203,12 +196,10 @@ div.nodeSaveButton {
 }
 div.nodeSettingsContent {
 	position:relative;
-	/*border:1px solid green;*/
-	/*min-height:80px;*/
 	margin-top:8px;
 	margin-left:14px;
 	margin-right:14px;
-	margin-bottom: 66px;
+	margin-bottom: 8px;
 
 }
 div.blingerBox {
@@ -259,14 +250,12 @@ div.activityBlingerBar {
 	height:10px;
 	z-index: 14;
 }
-
 div.systemBlinger {
 	position:absolute;
 	top:0px;
-	left:110px;
+	left:90px;
 	width:215px;
 }
-
 div.systemBlingerBox {
 	position:absolute;
 	top:15px;
@@ -296,42 +285,6 @@ div.systemBlingerValue {
 	font-size: 10px;
 	padding-right:1px 
 }
-div.sessionBlinger {
-	position:absolute;
-	top:0px;
-	left:75px;
-	width:85px;
-}
-div.dataRateBlinger {
-	position:absolute;
-	top:0px;
-	left:168px;
-	width:85px;
-
-}
-div.blingerVerticalAxis {
-	position:absolute;
-	border-right:1px solid #808080;
-	left:0px;
-	top:4px;
-	height:56px;
-	width:15px;
-}
-div.blingerGraphTopText {
-	position:absolute;
-	top:1px;
-	right:3px;
-	text-align: right;
-	z-index: 99;
-
-}
-div.blingerGraphBottomText {
-	position:absolute;
-	bottom:1px;
-	right:3px;
-	text-align: right;
-	z-index: 9;
-}
 div.pixel {
 	position:absolute;
 	width:1px;
@@ -350,8 +303,6 @@ div.configButton {
 	width:161px;
 	height:45px;
 }
-
-
 div.untangleButton {
 	cursor: pointer;
 	background-color: #E9E9E9;
@@ -365,7 +316,6 @@ div.untangleButtonHover {
 div.untangleButtonInvalid {
 	border: 1px solid green;
 }
-
 button.add {
     background-image:url(images/add.gif) !important;
 }
@@ -389,3 +339,23 @@ div.removeRow {
 	width: 100%;
 	cursor: pointer;
 }
+.fieldLabel {
+	width: 100px;
+}
+
+div.inputLine {
+  clear: both;
+  padding-top: 5px;
+  }
+
+div.inputLine span.label {
+  float: left;
+  width: 100px;
+  text-align: right;
+  }
+
+div.inputLine span.formw {
+  float: right;
+  width: 235px;
+  text-align: left;
+} 
